@@ -5,3 +5,4 @@
 ./Mono.Posix/MapAttribute.cs
 ./Mono.Posix/IncludeAttribute.cs
 ./Mono.Posix/Catalog.cs
+./Mono.Posix/PeerCred.cs
